kubernetes/apps/network/envoy-gateway/config/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "external.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: "${SVC_GATEWAY_EXTERNAL}"
  listeners:
    - name: http
      allowedRoutes:
        namespaces:
          from: Same
      port: 80
      protocol: HTTP
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-tls"
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "internal.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: "${SVC_GATEWAY_INTERNAL}"
  listeners:
    - name: http
      allowedRoutes:
        namespaces:
          from: Same
      port: 80
      protocol: HTTP
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-tls"
